# src/user.controller.ts
@@ -16,6 +16,7 @@ import { AppDataSource, User, MusicPost, Like } from "./models";
 import type { JwtPayload } from "./utils";
 import { PostResponse } from "./music-post.controller";
 import { In } from "typeorm";
+import { getCurrentUser } from "./auth.middleware";
 
 interface UserProfileResponse {
   id: number;
@@ -49,18 +50,17 @@ export class UserController extends Controller {
     };
   }
 
-  @Security("jwt", ["optional"])
+  // @Security("jwt", ["optional"])
   @Get("{userId}/likes")
   public async getUserLikes(
     @Request() req: Express.Request,
-    @Path() userId: number,
-    @Res() notFound: TsoaResponse<404, { message: string }>
+    @Path() userId: number
   ): Promise<PostResponse[]> {
     const user = await AppDataSource.getRepository(User).findOneBy({
       id: userId,
     });
     if (!user) {
-      return notFound(404, { message: "User not found" });
+      return [];
     }
 
     const posts = await AppDataSource.getRepository(MusicPost).find({
@@ -69,10 +69,11 @@ export class UserController extends Controller {
     });
 
     if (posts.length === 0) {
-      return notFound(404, { message: "No liked posts found for this user." });
+      return [];
     }
 
-    const currentUser = req.user as JwtPayload;
+    // const currentUser = req.user as JwtPayload;
+    const currentUser = getCurrentUser();
     const likedPosts =
       currentUser && currentUser.userId
         ? await AppDataSource.getRepository(Like).find({
